--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "babel-register": "^6.26.0",
-    "chai": "^4.1.2",
-    "mocha": "^5.2.0",
-    "puppeteer": "^1.5.0"
+    "chai": "^4.2.0",
+    "http-server": "^0.11.1",
+    "mocha": "^6.2.2",
+    "puppeteer": "^1.20.0"
   },
   "devDependencies": {},
   "scripts": {
