--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "chai": "^4.2.0",
     "http-server": "^0.11.1",
     "mocha": "^6.2.2",
-    "puppeteer": "^1.20.0"
+    "puppeteer-core": "1.12.2"
   },
   "devDependencies": {},
   "scripts": {
